SFDCProject/src/objects/Market__c.object
<CustomObject>
    <fields>
        <fullName>Duration_in_days__c</fullName>
        <defaultValue>30</defaultValue>
        <label>Duration in days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Leads__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Number of Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Current_No_Of_Leads_Install__c</fullName>
        <label>Total Current No of Leads (Install)</label>
        <summarizedField>Market_Assignment__c.Current_No_Of_Leads_Install__c</summarizedField>
        <summaryForeignKey>Market_Assignment__c.Market__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Current_No_Of_Leads_Sales__c</fullName>
        <label>Total Current No of Leads (Sales)</label>
        <summarizedField>Market_Assignment__c.Current_No_Of_Leads_Sales__c</summarizedField>
        <summaryForeignKey>Market_Assignment__c.Market__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Install_Partner_age_distribution__c</fullName>
        <label>Total Install Partner % Distribution</label>
        <summarizedField>Market_Assignment__c.Install_Partner_age_distribution__c</summarizedField>
        <summaryForeignKey>Market_Assignment__c.Market__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Sales_Partner_age_distribution__c</fullName>
        <label>Total Sales Partner % Distribution</label>
        <summarizedField>Market_Assignment__c.Sales_Partner_age_distribution__c</summarizedField>
        <summaryForeignKey>Market_Assignment__c.Market__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Utility_Company__c</fullName>
        <label>Utility Company</label>
        <picklist>
            <controllingField>State__c</controllingField>
            <picklistValues>
                <fullName>ACE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alameda Municipal Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allegheny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anaheim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banning Electric Utility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG&amp;E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burbank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Hudson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City of Palo Alto Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL&amp;P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colton Electric Utility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ConEdison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delmarva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duke Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eversource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glendale Water &amp; Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HECO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HELCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imperial Irrigation District</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IREA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JCP&amp;L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KIUC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LADWP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laurens Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lodi Electric Utility Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MECO</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Market</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Utility_Company__c</columns>
        <columns>Number_of_Leads__c</columns>
        <columns>Total_Sales_Partner_age_distribution__c</columns>
        <columns>Total_Install_Partner_age_distribution__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Created_Today</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Utility_Company__c</columns>
        <columns>Number_of_Leads__c</columns>
        <columns>Total_Sales_Partner_age_distribution__c</columns>
        <columns>Total_Install_Partner_age_distribution__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created Today</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Market Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Markets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Total_Install_Partner_negative_or_100</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Total_Install_Partner_age_distribution__c  &gt;1,Total_Install_Partner_age_distribution__c &lt;0)</errorConditionFormula>
        <errorMessage>Total of Install Partner %age Distribution must be &lt;= 100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Total_Sales_Partner_negative_or_100</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Total_Sales_Partner_age_distribution__c  &gt;1,Total_Sales_Partner_age_distribution__c &lt;0)</errorConditionFormula>
        <errorMessage>Total of Sales Partner %age Distribution must be &lt;= 100</errorMessage>
    </validationRules>
</CustomObject>